[package]
name = "ember"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27"
env_logger = "0.10"
log = "0.4"
cgmath = "0.18"
wgpu = "0.15"
pollster = "0.2"
bytemuck = { version = "1.12", features = [ "derive" ] }
image = { version = "0.24.0", default-features = false, features = ["png"] }
anyhow = "1.0"